--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,51 @@
+# Created by .ignore support plugin (hsz.mobi)
+### JetBrains template
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff:
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
+
+# Sensitive or high-churn files:
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
+
+# Gradle:
+.idea/gradle.xml
+.idea/libraries
+
+# Mongo Explorer plugin:
+.idea/mongoSettings.xml
+
+## File-based project format:
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+# Rake and Packer generated cruft
 /.bundle/
 /.yardoc
 /Gemfile.lock
@@ -7,7 +55,23 @@
 /pkg/
 /spec/reports/
 /tmp/
+/vendor/
 
-output-*
-*.box
+# Preloaded SSH keys
+keys/
+!keys/.gitkeep
+
+# Local Hiera overrides
+puppet/hieradata/local.yaml
+
+# Cache objects
 packer_cache/
+
+# For built boxes
+*.box
+output-*
+
+# Vagrant
+.vagrant/
+
+json/
