Stable early dev for BitswarmBox 1.0.0-pre1
Signed-off-by: Reuben Avery <ravery@bitswarm.io>

IntelliJ config files

removing two unwanted scripts from index

polishing gitignore

Adding Vagrantfile

creating puppet aws environment, doing away with manifestpath in puppet provisioners

--- a/.gitignore
+++ b/.gitignore
@@ -46,16 +46,11 @@ crashlytics-build.properties
 fabric.properties
 
 # Rake and Packer generated cruft
-/.bundle/
-/.yardoc
-/Gemfile.lock
-/_yardoc/
-/coverage/
-/doc/
-/pkg/
-/spec/reports/
-/tmp/
-/vendor/
+Gemfile.lock
+pkg/
+spec/reports/
+tmp/
+vendor/
 
 # Preloaded SSH keys
 keys/
@@ -73,5 +68,3 @@ output-*
 
 # Vagrant
 .vagrant/
-
-json/
