--- a/puppet/hiera.yaml
+++ b/puppet/hiera.yaml
@@ -6,6 +6,8 @@
 :hierarchy:
   - "common"
   - "%{::provisioner}"
+  - "%{::environment}"
+  - "%{::osfamily}"
   - "%{::app_project}"
   - "local"
 :yaml:
