--- a/puppet/hieradata/puppetmaster.yaml
+++ b/puppet/hieradata/puppetmaster.yaml
@@ -5,7 +5,7 @@ classes:
 
 bsl_bootstrap::puppetmaster::config::manage_hiera: 'true'
 bsl_bootstrap::puppetmaster::config::manage_puppetdb: 'true'
-bsl_bootstrap::puppetmaster::config::manage_hostname: 'true'
+bsl_bootstrap::puppetmaster::config::manage_hostname: 'false'
 bsl_bootstrap::puppetmaster::config::manage_puppetboard: 'false'
 bsl_bootstrap::puppetmaster::config::manage_r10k: 'true'
 bsl_bootstrap::puppetmaster::config::r10k_init_deploy_enabled: 'true'
