--- a/puppet/hieradata/aws.yaml
+++ b/puppet/hieradata/aws.yaml
@@ -5,3 +5,7 @@ classes:
   - packer::aws::users
 #  - packer::ec2::cloudinit
 #  - packer::ec2::sshd
+
+packer::aws::users::ohmyzsh: true
+ohmyzsh::plugins:
+  - aws
