--- a/puppet/hieradata/puppetmaster.yaml
+++ b/puppet/hieradata/puppetmaster.yaml
@@ -2,3 +2,6 @@
 classes:
   - bsl_bootstrap::puppetmaster::prepare
   - bsl_bootstrap::puppetmaster::setup
+
+hello_worlds:
+  - "hello from Packer's hieradata/puppetmaster.yaml"
