--- a/puppet/hiera.yaml
+++ b/puppet/hiera.yaml
@@ -7,7 +7,7 @@
   - "common"
   - "%{::provisioner}"
   - "%{::environment}"
-  - "%{::osfamily}"
+  - "%{::operatingsystem}"
   - "%{::app_project}"
   - "local"
 :yaml:
