Corrected hiera ordering, debugging management of aws users

--- a/puppet/hieradata/vagrant.yaml
+++ b/puppet/hieradata/vagrant.yaml
@@ -2,4 +2,5 @@
 classes:
   - packer::vagrant
 
+# disabling the bsl-bootstrap-init script so as to permit vagrant's own puppet provisioning
 bsl_bootstrap::puppetmaster::install::enable: false
